--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.10.2
 aniso8601==9.0.1
+bcrypt==4.0.1
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.3
@@ -16,6 +17,7 @@ marshmallow==3.19.0
 marshmallow-sqlalchemy==0.29.0
 packaging==23.0
 psycopg-binary==3.1.8
+psycopg2-binary==2.9.5
 python-dotenv==1.0.0
 pytz==2022.7.1
 six==1.16.0
